--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         </title>
     </head>
     <body>
-        <h1>Nama: Angger Binuko</h1>
+        <h1>Nama: Angger Binuko Paksi</h1>
         <h1>NIM : 12345678</h1>
         <h3>Pilih Jenis Kelamin</h3>
         <form>
