--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>
         <h1>Nama: Angger Binuko Paksi</h1>
         <h1>NIM : 12345678</h1>
+        <h1>KELAS : TI2C</h1>
         <h3>Pilih Jenis Kelamin</h3>
         <form>
             <input type="radio" name="gender" value="laki-laki"> Laki-laki </br>
