tugas web pertemuan 3

--- a/index.html
+++ b/index.html
@@ -1,18 +1,42 @@
-<html>
-    <head>
-        <title>
-            Latihan User Interface
-        </title>
-    </head>
-    <body>
-        <h1>Nama: Angger Binuko Paksi</h1>
-        <h1>NIM : 12345678</h1>
-        <h1>KELAS : TI2C</h1>
-        <h3>Pilih Jenis Kelamin</h3>
-        <form>
-            <input type="radio" name="gender" value="laki-laki"> Laki-laki </br>
-            <input type="radio" name="gender" value="perempuan"> Perempuan </br>
-            <input type="submit" value="SIMPAN">
-        </form>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Student Profile</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        h1 {
+            color: #007BFF;
+        }
+        p {
+            margin-bottom: 10px;
+        }
+    </style>
+</head>
+<body>
+
+    <h1>Student Profile</h1>
+
+    <img src="your_profile_picture_url.jpg" alt="Profile Picture" width="150">
+
+    <p><strong>Name:</strong> John Doe</p>
+    <p><strong>Student ID:</strong> S123456</p>
+    <p><strong>Major:</strong> Computer Science</p>
+    <p><strong>Email:</strong> john.doe@example.com</p>
+    <p><strong>Year:</strong> Sophomore</p>
+    <p><strong>Address:</strong> 123 Main Street, Cityville</p>
+
+    <h2>Course Schedule</h2>
+    <ul>
+        <li>CS101 - Introduction to Programming</li>
+        <li>MATH202 - Calculus II</li>
+        <li>ENG101 - English Composition</li>
+        <!-- Add more courses as needed -->
+    </ul>
+
+</body>
 </html>
