--- a/inputmahasiswa.html
+++ b/inputmahasiswa.html
@@ -1,6 +1,25 @@
 <html>
     <head>
         <title>Tugas Javascript</title>
+        <style>
+            /* Add some basic styling */
+            body {
+                font-family: Arial, sans-serif;
+            }
+            form {
+                width: 300px;
+                margin: 0 auto;
+            }
+            label {
+                display: block;
+                margin-top: 10px;
+            }
+            input[type="text"] {
+                width: 100%;
+                padding: 5px;
+                box-sizing: border-box;
+            }
+        </style>
     </head>
     <body>
         <form id="studentForm">
